[metadata]
name = agreement
version = 0.0.1
author = Wojciech Włodarczyk
author_email = wlodarczyk.woj@example.com
description = An implementation of popular agreement coefficients used for categorical measurements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heolin123/agreement
project_urls =
    Bug Tracker = https://github.com/heolin123/agreement/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
